overview general api

--- a/api-reference/apis/general-api/overview.mdx
+++ b/api-reference/apis/general-api/overview.mdx
@@ -1,58 +1,38 @@
 ---
 title: "Useful Endpoints Collection"
+description: 'This section contains a collection of handy endpoints to make your experience with our APIs easier.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-This section contains a collection of handy endpoints to make your experience with our APIs easier.
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-* [Upload Base64 Image](/general-api/base64-crop)
-* [Delete Generated Image](/general-api/delete-image)
-* [Clear Cache](/general-api/clear-cache)
-* [Buy lora train model](/general-api/buy-model)
-* [Buy subscription](/general-api/buy-subscription)
-* [NSFW Image Check](/general-api/nsfw-image-check)
-* [Get subscribed product](/general-api/subscribed-product)
-* [Upload Base64 Image](/general-api/base64-to-url)
-
-### Upload Base64 Image and Crop Endpoint[​](#upload-base64-image-and-crop-endpoint "Direct link to Upload Base64 Image and Crop Endpoint")
-
-This endpoint is used to upload an image in Base64 Format and crop it.
-
-### Delete Image Endpoint[​](#delete-image-endpoint "Direct link to Delete Image Endpoint")
-
-This endpoint is used to delete an image using the image name.
-
-### Get Trained Model List Endpoint[​](#get-trained-model-list-endpoint "Direct link to Get Trained Model List Endpoint")
-
-This endpoint returns an array with the IDs of the models that you have created.
-
-### Get Public Model List Endpoint[​](#get-public-model-list-endpoint "Direct link to Get Public Model List Endpoint")
-
-This endpoint returns a list of all the public models available together with information about their id, status, name, description, etc.
-
-### Clear User's Cache Endpoint[​](#clear-users-cache-endpoint "Direct link to Clear User's Cache Endpoint")
-
-This endpoint is used to clear the user's cache.
-
-### Buy Lora Model Endpoint[​](#buy-lora-model-endpoint "Direct link to Buy Lora Model Endpoint")
-
-This endpoint allows you to buy a Lora model automatically. It requires some additional settings to be made from your dashboard for a flawless operation.
-
-### Buy Subscription Plan Endpoint[​](#buy-subscription-plan-endpoint "Direct link to Buy Subscription Plan Endpoint")
-
-This endpoint allows you to buy an API key with a subscription plan automatically. It requires some additional settings to be made from your dashboard for a flawless operation.
-
-### NSFW Image Check[​](#nsfw-image-check "Direct link to NSFW Image Check")
-
-This endpoint allows you to check if an image is nsfw image
-
-### Upload Model[​](#upload-model "Direct link to Upload Model")
-
-This endpoint allows you to upload either public or private model
-
-## Playground[​](#playground "Direct link to Playground")
-
-You can try the available endpoints in our [Playground](https://modelslab.com/playground?channel=misc) section, just make sure to [sign up](https://modelslab.com/register) first.
+### Endpoints
+<CardGroup>
+  <Card title="Base64 Crop" href="/api-reference/apis/general-api/base64-crop">
+    .
+  </Card>
+  <Card title="Base64 to URL" href="/api-reference/apis/general-api/base64-to-url">
+    .
+  </Card>
+  <Card title="Buy Model" href="/api-reference/apis/general-api/buy-model">
+    .
+  </Card>
+  <Card title="Buy Subscription" href="/api-reference/apis/general-api/buy-subscription">
+    .
+  </Card>
+  <Card title="Cancel Subscription" href="/api-reference/apis/general-api/cancel-subscription">
+    .
+  </Card>
+  <Card title="Subscribed Product" href="/api-reference/apis/general-api/subscribed-product">
+    .
+  </Card>
+  <Card title="Clear Cache" href="/api-reference/apis/general-api/clear-cache">
+    .
+  </Card>
+  <Card title="Delete Image" href="/api-reference/apis/general-api/delete-image">
+    .
+  </Card>
+  <Card title="NSFW Image Check" href="/api-reference/apis/general-api/nsfw-image-check">
+    .
+  </Card>
+  <Card title="NSFW Prompt Check" href="/api-reference/apis/general-api/nsfw-prompt-check">
+    .
+  </Card>
+</CardGroup>
