--- a/api-reference/apis/3d-api/overview.mdx
+++ b/api-reference/apis/3d-api/overview.mdx
@@ -1,30 +1,20 @@
 ---
-title: "3D VERSE API"
+title: "Overview"
+description: 'The 3D VERSE API provides a collection of endpoints that enable you to transform images or text into 3D representations.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-The 3D VERSE API provides a collection of endpoints that enable you to transform images or text into 3D representations.
-
-* [Text to 3D](/3d-api/v6-txt-to-3d)
-* [Image to 3D](/3d-api/v6-img-to-3d)
-* [Upload Base64 Image](/3d-api/base64-to-url)
-* [Fetch processing request](/3d-api/fetch)
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-### Text to 3D[​](#text-to-3d "Direct link to Text to 3D")
-
-Generate a 3D image from a text-based prompt.
-
-### Image to 3D[​](#image-to-3d "Direct link to Image to 3D")
-
-Generate a 3D image from an input image.
-
-### Upload Base64 Image[​](#upload-base64-image "Direct link to Upload Base64 Image")
-
-Upload a base64 image to Generate a 3D object from an input image.
-
-### Fetch processing request[​](#fetch-processing-request "Direct link to Fetch processing request")
-
-Fetch the processing request status.
+### Endpoints
+<CardGroup>
+  <Card title="Text to 3D" href="/api-reference/apis/3d-api/text-to-3d">
+    Generate a 3D image from a text prompt.
+  </Card>
+  <Card title="Image to 3D" href="/api-reference/apis/3d-api/image-to-3d" >
+    Generate a 3D image from an input image.
+  </Card>
+  <Card title="Base64 to URL" href="/api-reference/apis/3d-api/base64-to-url">
+    Let's you to upload a 3D object in base64 format and retrieve a URL for the object.
+  </Card>
+  <Card title="Fetch 3D" href="/api-reference/apis/3d-api/fetch">
+    Fetch the processing request status.
+  </Card>
+</CardGroup>
