--- a/api-reference/apis/voice-cloning/overview.mdx
+++ b/api-reference/apis/voice-cloning/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "AudioGen API"
+title: "Overview"
 description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-over, and many more.'
 ---
 
