--- a/api-reference/apis/general-api/overview.mdx
+++ b/api-reference/apis/general-api/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Useful Endpoints Collection"
+title: "Overview"
 description: 'This section contains a collection of handy endpoints to make your experience with our APIs easier.'
 ---
 
